Fix CORS for Render deployment